deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: arcp-web
  namespace: arcp
  labels:
    app: arcp-web
spec:
  replicas: 3
  selector:
    matchLabels:
      app: arcp-web
  template:
    metadata:
      labels:
        app: arcp-web
    spec:
      containers:
      - name: arcp-web
        image: azertfcddghjk/arcp-app:latest
        ports:
        - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: arcp
  labels:
    app: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
      - name: redis
        image: redis:7-alpine
        ports:
        - containerPort: 6379
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: arcp-db
  namespace: arcp
  labels:
    app: arcp-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: arcp-db
  template:
    metadata:
      labels:
        app: arcp-db
    spec:
      containers:
      - name: arcp-db
        image: postgres:16-alpine
        ports:
        - containerPort: 5432
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: arcp-celery
  namespace: arcp
  labels:
    app: arcp-celery
spec:
  replicas: 1
  selector:
    matchLabels:
      app: arcp-celery
  template:
    metadata:
      labels:
        app: arcp-celery
    spec:
      containers:
      - name: arcp-celery
        image: azertfcddghjk/arcp-app:latest
        args: ["worker"]
